<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/atm_scrollView1">
		<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/atm_relativeLayout1">
				<TextView
					android:layout_alignParentTop="true"
					android:layout_marginTop="15dip"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/add_leftright_margin"
					android:layout_width="wrap_content"
					android:text="@string/bank_spinner_label" android:id="@+id/bank_spinner_label"></TextView>
				<Spinner
					android:layout_alignLeft="@+id/bank_spinner_label"
					android:layout_marginRight="@dimen/add_leftright_margin"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_below="@+id/bank_spinner_label" android:id="@+id/bank_spinner"></Spinner>
				<TextView
					android:layout_alignLeft="@+id/bank_spinner"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:layout_below="@+id/bank_spinner"
					android:layout_marginTop="@dimen/add_leftright_margin"
					android:text="@string/bank_extra_info_label" android:id="@+id/other_info_label"></TextView>
				<EditText
					android:layout_alignLeft="@+id/other_info_label"
					android:layout_height="wrap_content"
					android:lines="2"
					android:layout_marginRight="@dimen/add_leftright_margin"
					android:inputType="textMultiLine"
					android:layout_width="fill_parent"
					android:layout_below="@+id/other_info_label"
					android:maxLength="150"
					android:hint="@string/bank_extra_info_hint"
					android:id="@+id/extra_info_field"></EditText>
				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_below="@+id/extra_info_field"
					android:layout_alignLeft="@+id/extra_info_field"
					android:layout_marginRight="@dimen/add_leftright_margin"
					android:layout_marginTop="@dimen/add_leftright_margin"
					android:orientation="horizontal"
					android:baselineAligned="false"
					android:minHeight="40dip"
					android:layout_width="fill_parent" android:id="@+id/atm_linearLayout2">
					<TextView
						android:layout_height="wrap_content"
						android:id="@+id/textView3"
						android:layout_width="wrap_content"
						android:layout_gravity="center"
						android:text="@string/location_label"
						android:layout_marginRight="@dimen/add_leftright_margin"></TextView>
					<Button
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="left|center_vertical"
						android:drawableLeft="@android:drawable/ic_menu_mapmode"
						android:text="@string/choose_map_label"
						android:layout_weight="1"
						android:id="@+id/choose_map_button"></Button>
					<ImageButton
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:scaleType="center"
						android:src="@android:drawable/ic_menu_mylocation"
						android:layout_weight="0"
						android:id="@+id/my_location_button"></ImageButton>
				</LinearLayout>
				<TextView
					android:layout_height="wrap_content"
					android:layout_below="@+id/atm_linearLayout2"
					android:layout_width="fill_parent"
					android:layout_marginLeft="@dimen/add_leftright_margin"
					android:layout_marginRight="@dimen/add_leftright_margin"
					android:layout_marginTop="@dimen/add_leftright_margin"
					android:text="@string/empty_string"
					android:id="@+id/textview_location_result"></TextView>

			</RelativeLayout>
	</ScrollView>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"

		android:layout_alignParentBottom="true" android:id="@+id/atm_linearLayout3">
		<Button
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:gravity="center|center_vertical"
			android:drawableLeft="@android:drawable/ic_menu_save"
			android:layout_height="wrap_content"
			android:text="@string/bank_save_button"
			android:id="@+id/save_atm_button"></Button>
		<Button
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:gravity="center|center_vertical"
			android:drawableLeft="@android:drawable/ic_menu_revert"
			android:layout_height="wrap_content"
			android:text="@string/bank_cancel_button"
			android:id="@+id/cancel_atm_button"></Button>
	</LinearLayout>
</RelativeLayout>
